--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -11,3 +11,7 @@ langchain-community>=0.0.36
 
 pytest
 pydantic
+
+spacy>=3.7.2
+unidecode>=1.3.8
+pt_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.7.0/pt_core_news_sm-3.7.0-py3-none-any.whl
