--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -12,6 +12,9 @@ langchain-community>=0.0.36
 pytest
 pydantic
 
+websockets>=12.0
+typing-extensions>=4.7.0
+
 spacy>=3.7.2
 unidecode>=1.3.8
 pt_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.7.0/pt_core_news_sm-3.7.0-py3-none-any.whl
